--- a/ui/login.ui
+++ b/ui/login.ui
@@ -87,12 +87,23 @@
        </widget>
       </item>
       <item row="1" column="1" colspan="2">
-       <widget class="QLineEdit" name="passwordLineEdit"/>
+       <widget class="QLineEdit" name="passwordLineEdit">
+        <property name="echoMode">
+         <enum>QLineEdit::EchoMode::PasswordEchoOnEdit</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QCheckBox" name="showPasswordCheckBox">
+        <property name="text">
+         <string>Show Password</string>
+        </property>
+       </widget>
       </item>
       <item row="2" column="2">
        <widget class="QPushButton" name="loginButton">
         <property name="text">
-         <string>PushButton</string>
+         <string>Login</string>
         </property>
        </widget>
       </item>
