--- a/ui/admin.ui
+++ b/ui/admin.ui
@@ -80,6 +80,11 @@
     <string>Order List</string>
    </property>
   </action>
+  <action name="actionOpen">
+   <property name="text">
+    <string>Open</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
